[WFCORE-6893] Add standalone mode tests for installation manager integration